--- a/redux-saga/vanilla/mini-saga/index.html
+++ b/redux-saga/vanilla/mini-saga/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
   <div>
-    <button id="increment">+</button>
-    <input type="text" readonly>
-    <button id="decrement">-</button>
+    <button id="increment">+(delay 500ms)</button>
+    <input type="text" value="0" readonly>
+    <button id="decrement">-(delay 400ms)</button>
   </div>
   <script src="./index.js"></script>
 </body>
