--- a/redux-saga/test/core/runSaga/index.html
+++ b/redux-saga/test/core/runSaga/index.html
@@ -14,115 +14,7 @@
   <button id="inc">+(delay 500ms)</button>
   <input type="text" readonly style="width:30px; text-align: center;">
   <button id="dec">-(delay 1s)</button>
-  <script>
-    function reducer(state = 0, action) {
-      switch (action.type) {
-        case 'INCREMENT': {
-          return ++state
-        } break;
-        case 'DECREMENT': {
-          return --state
-        } break;
-        default:
-          return state;
-      }
-    }
-
-    function createStore(reducer) {
-      let state
-      let listener
-
-      function dispatch(action) {
-        nextState = reducer(state, action)
-        if (nextState !== state && listener) {
-          state = nextState
-          listener()
-        }
-        return action
-      }
-
-      function getState() {
-        return state
-      }
-
-      function subscribe(cb) {
-        listener = cb
-      }
-
-      dispatch({ type: 'INIT' })
-
-      return {
-        dispatch,
-        getState,
-        subscribe
-      }
-    }
-
-    function configStore() {
-      const store = createStore(reducer)
-      store.subscribe(() => {
-        render(store.getState())
-      })
-      store.dispatch({type:'UNKNOWN'})
-      return store
-    }
-
-    const input$ = document.querySelector('input')
-    const inc$ = document.querySelector('#inc')
-    const dec$ = document.querySelector('#dec')
-
-    function render(state) {
-      input$.value = state
-    }
-
-    const store = configStore()
-    document.addEventListener('click', (e) => {
-      switch (e.target.id) {
-        case 'inc': {
-          store.dispatch({type: 'INCREMENT_ASYNC'})
-        } break;
-        case 'dec': {
-          store.dispatch({type: 'DECREMENT_ASYNC'})
-        } break;
-      }
-    })
-
-    function* root() {
-      yield ReduxSagaEffects.all([ReduxSagaEffects.fork(incAsync), ReduxSagaEffects.fork(decAsync)])
-    }
-
-    function* incAsync() {
-      while(true) {
-        yield ReduxSagaEffects.take('INCREMENT_ASYNC')
-        yield ReduxSagaEffects.delay(500)
-        yield ReduxSagaEffects.put({ type: 'INCREMENT' })
-      }
-    }
-
-    function* decAsync() {
-      while(true) {
-        yield ReduxSagaEffects.take('DECREMENT_ASYNC')
-        yield ReduxSagaEffects.delay(1000)
-        yield ReduxSagaEffects.put({ type: 'DECREMENT' })
-      }
-    }
-
-    const channel = ReduxSaga.stdChannel()
-    const dispatch = next => action => {
-       // hit reducers
-      result = next(action)
-      channel.put(action)
-      return result
-    }
-    // enhance
-    store.dispatch = dispatch(store.dispatch)
-    const IO = {
-      channel,
-      dispatch: store.dispatch,
-      getState: store.getState
-    }
-    task = ReduxSaga.runSaga(IO, root)
-  </script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
